--- a/style.scss
+++ b/style.scss
@@ -33,7 +33,7 @@ main{
         border-radius: 0 0 20px 20px;
     }
     position: absolute;
-    top: 200px;
+    top: 100px;
     left: 50%;
     transform: translateX(-50%);
     width: 57%;
@@ -203,5 +203,54 @@ main{
             color: $darkGrayishViolet;
             font-size: 0.9rem;
         }
+    }
+}
+
+footer{
+    position: absolute;
+    top: 800px;
+    width: 100%;
+    text-align: center;
+    a, a:visited{
+        color: $lightMagenta;
+        text-decoration: none;
+    }
+}
+
+@media(max-width: 768px ){
+
+    main{
+        flex-direction: column;
+        border: 1px solid black;
+        width: 100%;
+        top: 50px;
+        #phone{
+            width: 90%;
+            #phoneBody{
+                .leftMessageContainer{
+                    .leftMessage{
+                        font-size: 11px;
+                    }
+                }
+                .rightMessageContainer{
+                    .rightMessage{
+                        font-size: 11px;
+                    }
+                }
+            }
+            #userInputContainer{
+                bottom: 34%;
+                width: 80%;
+                left: 50%;
+                transform: translateX(-51%);
+            }
+        }
+        #appDetails{
+            margin-top: 100px;
+        }
+    }
+
+    footer{
+        top: 1000px;
     }
 }
